edit gitignore file

--- a/FirstBlazorApp/.gitignore
+++ b/FirstBlazorApp/.gitignore
@@ -3,47 +3,5 @@
 **/FirstBlazorApp/.vs/
 **/FirstBlazorApp/bin/
 **/FirstBlazorApp/obj/
-/obj/Debug/net7.0/.NETCoreApp,Version=v7.0.AssemblyAttributes.cs
-/obj/Debug/net7.0/apphost.exe
-/bin/Debug/net7.0/appsettings.Development.json
-/bin/Debug/net7.0/appsettings.json
-/obj/Debug/net7.0/FirstBlazorApp.AssemblyInfo.cs
-/obj/Debug/net7.0/FirstBlazorApp.AssemblyInfoInputs.cache
-/obj/Debug/net7.0/FirstBlazorApp.assets.cache
-/obj/Debug/net7.0/scopedcss/projectbundle/FirstBlazorApp.bundle.scp.css
-/obj/Debug/net7.0/FirstBlazorApp.csproj.AssemblyReference.cache
-/obj/Debug/net7.0/FirstBlazorApp.csproj.CoreCompileInputs.cache
-/obj/Debug/net7.0/FirstBlazorApp.csproj.FileListAbsolute.txt
-/obj/FirstBlazorApp.csproj.nuget.dgspec.json
-/obj/FirstBlazorApp.csproj.nuget.g.props
-/obj/FirstBlazorApp.csproj.nuget.g.targets
-/bin/Debug/net7.0/FirstBlazorApp.deps.json
-/bin/Debug/net7.0/FirstBlazorApp.dll
-/obj/Debug/net7.0/ref/FirstBlazorApp.dll
-/obj/Debug/net7.0/refint/FirstBlazorApp.dll
-/obj/Debug/net7.0/FirstBlazorApp.dll
-/bin/Debug/net7.0/FirstBlazorApp.exe
-/obj/Debug/net7.0/FirstBlazorApp.GeneratedMSBuildEditorConfig.editorconfig
-/obj/Debug/net7.0/FirstBlazorApp.genruntimeconfig.cache
-/obj/Debug/net7.0/FirstBlazorApp.GlobalUsings.g.cs
-/obj/Debug/net7.0/FirstBlazorApp.MvcApplicationPartsAssemblyInfo.cache
-/bin/Debug/net7.0/FirstBlazorApp.pdb
-/obj/Debug/net7.0/FirstBlazorApp.pdb
-/obj/Debug/net7.0/FirstBlazorApp.RazorAssemblyInfo.cache
-/obj/Debug/net7.0/FirstBlazorApp.RazorAssemblyInfo.cs
-/bin/Debug/net7.0/FirstBlazorApp.runtimeconfig.json
-/bin/Debug/net7.0/FirstBlazorApp.staticwebassets.runtime.json
-/obj/Debug/net7.0/scopedcss/bundle/FirstBlazorApp.styles.css
-/obj/Debug/net7.0/scopedcss/Shared/MainLayout.razor.rz.scp.css
-/obj/Debug/net7.0/staticwebassets/msbuild.build.FirstBlazorApp.props
-/obj/Debug/net7.0/staticwebassets/msbuild.buildMultiTargeting.FirstBlazorApp.props
-/obj/Debug/net7.0/staticwebassets/msbuild.buildTransitive.FirstBlazorApp.props
-/obj/Debug/net7.0/staticwebassets/msbuild.FirstBlazorApp.Microsoft.AspNetCore.StaticWebAssets.props
-/obj/Debug/net7.0/scopedcss/Shared/NavMenu.razor.rz.scp.css
-/obj/project.assets.json
-/obj/project.nuget.cache
-/obj/project.packagespec.json
-/obj/rider.project.restore.info
-/obj/Debug/net7.0/staticwebassets.build.json
-/obj/Debug/net7.0/staticwebassets.development.json
-/obj/Debug/net7.0/staticwebassets.pack.json
+/obj/
+/bin/
