--- a/FirstBlazorApp/FirstBlazorApp.csproj
+++ b/FirstBlazorApp/FirstBlazorApp.csproj
@@ -24,6 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Blazored.SessionStorage" Version="2.4.0" />
       <PackageReference Include="MatBlazor" Version="2.10.0" />
     </ItemGroup>
 
